<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="social.soshop.ninniez.ribbit.LoginActivity"
    android:id="@+id/loginRelLayout"
    style="@style/AuthBackground"

    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/content_desc_background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView

        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/subTitle"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/login_layout_padding"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/login_hint_text_size"
            android:background="@drawable/apptheme_edit_text_holo_light"
            />

        <requestFocus/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/login_hint_text_size"
            android:background="@drawable/apptheme_edit_text_holo_light"


            />



    </LinearLayout>

    <!--use custom color/drawable for the button using android:background-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_buton"
        android:layout_centerVertical="true"
        android:layout_below="@id/editTextLayout"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/text_color"
        />



    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_vertical_margin"
         />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
